samples/_failures_safe/1761301405_bb6417_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_282be41d.c: In function ‘main’:
./samples/SAFE/__tmp_282be41d.c:129:15: error: missing terminating " character
  129 |     if (scanf("%
      |               ^~
./samples/SAFE/__tmp_282be41d.c:129:5: error: expected expression at end of input
  129 |     if (scanf("%
      |     ^~
./samples/SAFE/__tmp_282be41d.c:129:5: error: expected declaration or statement at end of input
